buildout and style about-page

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 			<!-- custom slideshow component -->
 			<div class="content slide-show">
 				<i class="slides-btn-left fa fa-arrow-left fa-3x"></i>
-					<div class="slide-show-slides gallery-effect">
-						<a href="images/ux-desktop.png"><img class="slides-img" src="images/ux-desktop.png" alt="desktop" /></a>
-						<a href="images/ux-phone.png"><img class="slides-img" src="images/ux-phone.png" alt="phone" /></a>
-						<a href="images/ux-both.png"><img class="slides-img" src="images/ux-both.png" alt="both" /></a>
-					</div>
+				<div class="slide-show-slides gallery-effect">
+					<a href="images/ux-desktop.png"><img class="slides-img" src="images/ux-desktop.png" alt="desktop" /></a>
+					<a href="images/ux-phone.png"><img class="slides-img" src="images/ux-phone.png" alt="phone" /></a>
+					<a href="images/ux-both.png"><img class="slides-img" src="images/ux-both.png" alt="both" /></a>
+				</div>
 				<i class="slides-btn-right fa fa-arrow-right fa-3x"></i>
 			</div>
 		</section> <!-- //second-->
@@ -99,7 +99,8 @@
 			</header>
 
 			<div class="content">
-				<p>Download the <a href="#top-top" class="scrolly">mobile app</a>, or <a href="https://blissful-mcnulty-5b5539.netlify.com/" target="_blank">create
+				<p>Download the <a href="#top-top" class="scrolly">mobile app</a>, or <a href="https://blissful-mcnulty-5b5539.netlify.com/"
+					 target="_blank">create
 						an account</a> online, and start recording memories in your private journal!</p>
 
 				<ul class="feature-icons">
@@ -117,28 +118,91 @@
 					<li>
 						<center>
 							<a href="#top-top" class="scrolly">
-							<i class="fa fa-arrow-up fa-5x"></i>
+								<i class="fa fa-arrow-up fa-5x"></i>
 							</a>
 						</center>
 					</li>
 				</ul>
 			</div> <!-- //third-->
 
-			<!-- CONTACT INFO FOOTER -->
-			<footer>
-				<ul class="items">
+		</section>
+
+		<!-- about -->
+		<section id="about">
+			<header>
+				<h4>About Our Team</h4>
+				<p>click to expand</p>
+			</header>
+
+			<div class="content about-content hidden">
+				<p>This project was developed by students<br>at<br>Lambda School<br><a href="https://lambdaschool.com/" target="_blank"><img id="lambda-logo" src="/images/lambda_small.png" alt="Lambda School"></a><br>BUILD WEEK / FEB 2019</p>
+
+				<div class="floating-heads">
+					<i class="icon fa-address-card">   User Interface Developer</i>
+					<p>
+							<h6>Ian Belknap</h6>
+						<img src="/images/ui3.jpeg" alt="ui3">
+					</p>
+
+					<i class="icon fa-users">   User Experience Designer</i>
+					<p>
+						<h6>Jason Zimmerman</h6>
+						<img src="/images/ux.png" alt="ux">
+					</p>
+
+					<i class="icon fa-apple">   iOS Developer</i>
+					<p>
+						<h6>Moses Robinson</h6>
+						<img src="/images/ios.jpeg" alt="ios">
+					</p>
+
+					<i class="icon fa-cogs">   Front End Architect</i>
+					<p>
+						<h6>Christian Allen</h6>
+						<img src="/images/fe1.jpeg" alt="fe1">
+					</p>
+
+					<i class="icon fa-database">   Back End Architect</i>
+					<p>
+						<h6>Addison Stavlo</h6>
+						<img src="/images/be.png" alt="be">
+					</p>
+
+					<i class="icon fa-gavel">   Scrum Master</i>
+					<p>
+						<h6>Carlos Vargas</h6>
+						<img src="/images/scrum.png" alt="scrum">
+					</p>
+
+				</div>
+
+				<!-- TOP TOP ARROW -->
+				<ul class="actions">
 					<li>
-						<h3>CONTACT</h3>
-						<a href="#top-top" class="scrolly">one.line.a.day@lambdabuildweeks.com</a>
-						<ul class="icons">
-							<li><a href="https://github.com/one-line-a-day" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.facebook.com/LambdaSchoolOnline/" target= "_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.linkedin.com/in/ian-belknap-97858151/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://twitter.com/Austen" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						</ul>
+						<center>
+							<a href="#top-top" class="scrolly">
+								<i class="fa fa-arrow-up fa-5x"></i>
+							</a>
+						</center>
 					</li>
 				</ul>
-			</footer>
+			</div> <!-- //about-->
+
+						<!-- CONTACT INFO FOOTER -->
+						<footer>
+								<ul class="items">
+									<li>
+										<h3>CONTACT</h3>
+										<a href="#top-top" class="scrolly">one.line.a.day@lambdabuildweeks.com</a>
+										<ul class="icons">
+											<li><a href="https://github.com/one-line-a-day" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
+											<li><a href="https://www.facebook.com/LambdaSchoolOnline/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+											<li><a href="https://www.linkedin.com/in/ian-belknap-97858151/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+											<li><a href="https://twitter.com/Austen" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										</ul>
+									</li>
+								</ul>
+							</footer>
 
 		</section>
 
@@ -149,7 +213,7 @@
 
 
 	<!-- Elements -->
-<!-- 	
+	<!-- 	
 					<section>
 						<header>
 							<h2>Elements</h2>
@@ -428,7 +492,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/ianbe.js"></script>
-	
+
 </body>
 
 </html>
